# tiny-skia-cpp

./: .gitignore  AGENTS.md  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Doxyfile.in  LICENSE  MODULE.bazel  README.md  renovate.json
.benchmarks/: render_perf_native.csv  render_perf_scalar.csv
.github/workflows/: ci.yml  docs.yml
bazel/: defs.bzl  simd_test.bzl  simd_transition.bzl
bazel/config/: BUILD.bazel
docs/: mainpage.md
docs/design_docs/: AGENTS.md  doxygen_public_surface.md  tiny-skia_cpp_bootstrap.md  tiny-skia_cpp_cfg_if_simd.md  tiny-skia_cpp_completion_roadmap.md  tiny-skia_cpp_idiomatic_api.md  tiny-skia_cpp_readability_review.md  tiny-skia_cpp_validation.md
docs/design_docs/tiny-skia_cpp_bootstrap_function_maps/: core.md  painter.md  path64.md  pipeline.md  scan.md  shaders.md  wide.md
examples/: BUILD.bazel  PngEncoder.h  fill.cpp  gamma.cpp  hairline.cpp  image_on_image.cpp  large_image.cpp  linear_gradient.cpp  mask.cpp  pattern.cpp  stroke.cpp
src/: BUILD.bazel
src/tiny_skia/: AlphaRuns.cpp  AlphaRuns.h  BUILD.bazel  BlendMode.h  Blitter.cpp  Blitter.h  Color.cpp  Color.h  Dash.cpp  Dash.h  Edge.cpp  Edge.h  EdgeBuilder.cpp  EdgeBuilder.h  EdgeClipper.cpp  EdgeClipper.h  F32x2.h  F32x4.h  FixedPoint.cpp  FloatingPoint.cpp  FloatingPoint.h  Geom.cpp  Geom.h  Lib.cpp  Lib.h  LineClipper.cpp  LineClipper.h  Mask.cpp  Mask.h  MaskOps.cpp  Math.cpp  Math.h  Paint.h  Painter.cpp  Painter.h  Path.h  PathBuilder.cpp  PathBuilder.h  PathGeometry.cpp  PathGeometry.h  (+17 more)
src/tiny_skia/filter/: FilterGraph.cpp  FilterGraph.h
src/tiny_skia/path64/: BUILD.bazel  Cubic64.cpp  Cubic64.h  LineCubicIntersections.cpp  LineCubicIntersections.h  Mod.cpp  Mod.h  Point64.cpp  Point64.h  Quad64.cpp  Quad64.h  Scalar64.h
src/tiny_skia/path64/tests/: BUILD.bazel  Cubic64Test.cpp  LineCubicIntersectionsTest.cpp  ModTest.cpp  Point64Test.cpp  Quad64Test.cpp
src/tiny_skia/pipeline/: BUILD.bazel  Blitter.cpp  Blitter.h  Highp.cpp  Highp.h  Lowp.cpp  Lowp.h  Mod.cpp  Mod.h
src/tiny_skia/pipeline/tests/: BUILD.bazel  BlitterTest.cpp
src/tiny_skia/scan/: BUILD.bazel  Hairline.cpp  Hairline.h  HairlineAa.cpp  HairlineAa.h  Mod.cpp  Path.cpp  Path.h  PathAa.cpp  PathAa.h
src/tiny_skia/scan/tests/: BUILD.bazel  ScanPathTest.cpp
src/tiny_skia/shaders/: BUILD.bazel  Gradient.cpp  Gradient.h  LinearGradient.cpp  LinearGradient.h  Mod.cpp  Mod.h  Pattern.cpp  Pattern.h  RadialGradient.cpp  RadialGradient.h  SweepGradient.cpp  SweepGradient.h
src/tiny_skia/shaders/tests/: BUILD.bazel  ModTest.cpp
src/tiny_skia/tests/: AlphaRunsTest.cpp  BUILD.bazel  BlendModeTest.cpp  BlitterTest.cpp  ColorTest.cpp  EdgeBuilderTest.cpp  EdgeClipperTest.cpp  EdgeCubicTest.cpp  EdgeLineTest.cpp  EdgeQuadraticTest.cpp  FixedPointTest.cpp  FloatingPointTest.cpp  GeomTest.cpp  LineClipperTest.cpp  MaskTest.cpp  MathTest.cpp  PainterTest.cpp  PathGeometryTest.cpp  PathTest.cpp  PathVecTest.cpp  PipelineStagesTest.cpp  PixmapTest.cpp
src/tiny_skia/tests/test_utils/: BUILD.bazel  GeomMatchers.h  PathEdgeMatchers.h  PixmapMaskMatchers.h  ScanMatchers.h
src/tiny_skia/wide/: BUILD.bazel  F32x16T.cpp  F32x4T.cpp  F32x4T.h  F32x8T.cpp  F32x8T.h  I32x4T.cpp  I32x4T.h  I32x8T.cpp  I32x8T.h  Mod.cpp  Mod.h  U16x16T.cpp  U16x16T.h  U32x4T.cpp  U32x4T.h  U32x8T.cpp  U32x8T.h
src/tiny_skia/wide/backend/: Aarch64NeonF32x4T.h  Aarch64NeonF32x8T.h  Aarch64NeonI32x4T.h  Aarch64NeonU16x16T.h  Aarch64NeonU32x4T.h  ScalarF32x16T.h  ScalarF32x4T.h  ScalarF32x8T.h  ScalarI32x4T.h  ScalarI32x8T.h  ScalarU16x16T.h  ScalarU32x4T.h  ScalarU32x8T.h  X86Avx2FmaF32x4T.h  X86Avx2FmaF32x8T.h  X86Avx2FmaI32x4T.h  X86Avx2FmaI32x8T.h  X86Avx2FmaU16x16T.h  X86Avx2FmaU32x8T.h
src/tiny_skia/wide/tests/: BUILD.bazel  F32x4TTest.cpp  F32x8TTest.cpp  I32x4TTest.cpp  I32x8TTest.cpp  ModTest.cpp  SimdModeTest.cpp  U16x16TTest.cpp  U32x4TTest.cpp  U32x8TTest.cpp
tests/: AlphaRunsTest.cpp  BUILD.bazel  BlitterTest.cpp  ColorTest.cpp  Cubic64Test.cpp  EdgeBuilderTest.cpp  EdgeClipperTest.cpp  EdgeCubicTest.cpp  EdgeLineTest.cpp  FixedPointTest.cpp  GeomTest.cpp  LibTest.cpp  LineClipperTest.cpp  LineCubicIntersectionsTest.cpp  PathGeometryTest.cpp  Point64Test.cpp  Quad64Test.cpp  ScanPathTest.cpp  TinySkiaPortingTest.cpp
tests/benchmarks/: BUILD.bazel  README.md  RenderPerfBench.cpp  run_render_perf_regression_test.sh
tests/integration/: BUILD.bazel  CrossValidationTest.cpp  DashTest.cpp  FillTest.cpp  GammaTest.cpp  GradientsTest.cpp  HairlineTest.cpp  MaskTest.cpp  PathTest.cpp  PatternTest.cpp  PixmapTest.cpp  SkiaDashTest.cpp  StrokeTest.cpp
tests/rust_ffi/: BUILD.bazel
tests/rust_ffi/include/: tiny_skia_ffi.h
tests/rust_ffi/src/: lib.rs
tests/test_utils/: BUILD.bazel  CrossValidator.h  GoldenTestHelper.h  PngDecoder.cpp  RustReference.h
