module(name = "tiny-skia-cpp")

###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
###############################################################################

bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "pixelmatch-cpp17", version = "1.0.3")
bazel_dep(name = "zlib", version = "1.3.1.bcr.4")

single_version_override(
    module_name = "googletest",
    version = "1.14.0",
    patches = ["//:googletest.patch"],
    patch_strip = 1,
)
