"""Core tiny_skia_cpp library sources."""

load("//:bazel/defs.bzl", "tiny_skia_cc_library")

# Initial real build target. More modules are added as they are ported.
tiny_skia_cc_library(
    name = "tiny_skia_lib",
    srcs = [
        "tiny_skia/Lib.cpp",
        "tiny_skia/Color.cpp",
        "tiny_skia/AlphaRuns.cpp",
        "tiny_skia/Blitter.cpp",
        "tiny_skia/Geom.cpp",
        "tiny_skia/Edge.cpp",
        "tiny_skia/Math.cpp",
        "tiny_skia/FixedPoint.cpp",
        "tiny_skia/LineClipper.cpp",
        "tiny_skia/path64/Point64.cpp",
        "tiny_skia/path64/Scalar64.cpp",
        "tiny_skia/path64/Quad64.cpp",
        "tiny_skia/BlendMode.cpp",
    ],
    hdrs = [
        "tiny_skia/Lib.h",
        "tiny_skia/Color.h",
        "tiny_skia/AlphaRuns.h",
        "tiny_skia/Blitter.h",
        "tiny_skia/Geom.h",
        "tiny_skia/Edge.h",
        "tiny_skia/Math.h",
        "tiny_skia/FixedPoint.h",
        "tiny_skia/LineClipper.h",
        "tiny_skia/path64/Point64.h",
        "tiny_skia/path64/Scalar64.h",
        "tiny_skia/path64/Quad64.h",
        "tiny_skia/BlendMode.h",
    ],
    defines = ["TINYSKIA_CPP_BIT_EXACT_MODE=1"],
    visibility = ["//visibility:public"],
    include_prefix = "tiny_skia",
    strip_include_prefix = "tiny_skia",
)
