"""Core tiny_skia_cpp library sources."""

load("//:bazel/defs.bzl", "tiny_skia_cc_library")

# Initial real build target. More modules are added as they are ported.
tiny_skia_cc_library(
    name = "tiny_skia_lib",
    srcs = [
        "tiny_skia/Lib.cpp",
        "tiny_skia/Color.cpp",
        "tiny_skia/AlphaRuns.cpp",
        "tiny_skia/Blitter.cpp",
        "tiny_skia/PathGeometry.cpp",
        "tiny_skia/EdgeClipper.cpp",
        "tiny_skia/Geom.cpp",
        "tiny_skia/Edge.cpp",
        "tiny_skia/Math.cpp",
        "tiny_skia/FixedPoint.cpp",
        "tiny_skia/LineClipper.cpp",
        "tiny_skia/path64/Point64.cpp",
        "tiny_skia/path64/Mod.cpp",
        "tiny_skia/path64/Cubic64.cpp",
        "tiny_skia/path64/LineCubicIntersections.cpp",
        "tiny_skia/path64/Scalar64.cpp",
        "tiny_skia/path64/Quad64.cpp",
        "tiny_skia/EdgeBuilder.cpp",
        "tiny_skia/BlendMode.cpp",
        "tiny_skia/scan/Path.cpp",
        "tiny_skia/scan/PathAa.cpp",
        "tiny_skia/scan/Hairline.cpp",
        "tiny_skia/scan/HairlineAa.cpp",
        "tiny_skia/scan/Mod.cpp",
    ],
    hdrs = [
        "tiny_skia/Lib.h",
        "tiny_skia/Color.h",
        "tiny_skia/AlphaRuns.h",
        "tiny_skia/Blitter.h",
        "tiny_skia/Geom.h",
        "tiny_skia/Edge.h",
        "tiny_skia/Math.h",
        "tiny_skia/FixedPoint.h",
        "tiny_skia/LineClipper.h",
        "tiny_skia/Path.h",
        "tiny_skia/PathGeometry.h",
        "tiny_skia/EdgeBuilder.h",
        "tiny_skia/EdgeClipper.h",
        "tiny_skia/path64/Point64.h",
        "tiny_skia/path64/Mod.h",
        "tiny_skia/path64/Cubic64.h",
        "tiny_skia/path64/LineCubicIntersections.h",
        "tiny_skia/path64/Scalar64.h",
        "tiny_skia/path64/Quad64.h",
        "tiny_skia/BlendMode.h",
        "tiny_skia/scan/Path.h",
        "tiny_skia/scan/PathAa.h",
        "tiny_skia/scan/Hairline.h",
        "tiny_skia/scan/HairlineAa.h",
        "tiny_skia/scan/Mod.h",
    ],
    defines = ["TINYSKIA_CPP_BIT_EXACT_MODE=1"],
    visibility = ["//visibility:public"],
    include_prefix = "tiny_skia",
    strip_include_prefix = "tiny_skia",
)
