"""Aggregate tiny_skia_cpp library."""

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "tiny_skia_lib",
    deps = [
        "//src/tiny_skia:tiny_skia_core",
        "//src/tiny_skia/scan:tiny_skia_scan",
        "//src/tiny_skia/wide:tiny_skia_wide",
    ],
    visibility = ["//visibility:public"],
)
