"""Tests for the tiny_skia_cpp port."""

package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "tiny_skia_core_tests",
    srcs = [
        "AlphaRunsTest.cpp",
        "FixedPointTest.cpp",
        "ColorTest.cpp",
        "BlitterTest.cpp",
        "GeomTest.cpp",
        "LineClipperTest.cpp",
        "Point64Test.cpp",
        "Quad64Test.cpp",
        "EdgeLineTest.cpp",
        "EdgeQuadraticTest.cpp",
        "EdgeCubicTest.cpp",
        "LibTest.cpp",
        "BlendModeTest.cpp",
        "MathTest.cpp",
    ],
    copts = ["-std=c++20"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//src:tiny_skia_lib",
    ],
)
