"""Root tiny_skia sources."""

load("//:bazel/defs.bzl", "tiny_skia_cc_library")

tiny_skia_cc_library(
    name = "tiny_skia_point",
    srcs = [],
    hdrs = [
        "Point.h",
    ],
    include_prefix = "tiny_skia",
    strip_include_prefix = ".",
    visibility = ["//visibility:public"],
)

tiny_skia_cc_library(
    name = "tiny_skia_core",
    srcs = [
        "AlphaRuns.cpp",
        "BlendMode.cpp",
        "Blitter.cpp",
        "Color.cpp",
        "Dash.cpp",
        "Edge.cpp",
        "EdgeBuilder.cpp",
        "EdgeClipper.cpp",
        "FixedPoint.cpp",
        "Geom.cpp",
        "LineClipper.cpp",
        "Math.cpp",
        "Mask.cpp",
        "PathBuilder.cpp",
        "PathGeometry.cpp",
        "PathSegmentsIter.cpp",
        "Pixmap.cpp",
        "Stroke.cpp",
        "Stroker.cpp",
        "//src/tiny_skia/pipeline:srcs",
        "//src/tiny_skia/shaders:srcs",
    ],
    hdrs = [
        "AlphaRuns.h",
        "BlendMode.h",
        "Blitter.h",
        "Color.h",
        "Dash.h",
        "Edge.h",
        "EdgeBuilder.h",
        "EdgeClipper.h",
        "FixedPoint.h",
        "Geom.h",
        "LineClipper.h",
        "Math.h",
        "Mask.h",
        "Painter.h",
        "Path.h",
        "PathBuilder.h",
        "PathGeometry.h",
        "Pixmap.h",
        "Point.h",
        "Scalar.h",
        "Stroke.h",
        "Stroker.h",
        "//src/tiny_skia/pipeline:hdrs",
        "//src/tiny_skia/shaders:hdrs",
    ],
    deps = [
        "//src/tiny_skia:tiny_skia_point",
        "//src/tiny_skia/path64:tiny_skia_path64",
    ],
    defines = ["TINYSKIA_CPP_BIT_EXACT_MODE=1"],
    include_prefix = "tiny_skia",
    strip_include_prefix = ".",
    visibility = ["//visibility:public"],
)

tiny_skia_cc_library(
    name = "tiny_skia_painter",
    srcs = [
        "Painter.cpp",
    ],
    hdrs = [],
    deps = [
        "//src/tiny_skia:tiny_skia_core",
        "//src/tiny_skia/scan:tiny_skia_scan",
    ],
    defines = ["TINYSKIA_CPP_BIT_EXACT_MODE=1"],
    include_prefix = "tiny_skia",
    strip_include_prefix = ".",
    visibility = ["//visibility:public"],
)
