"""Performance benchmarks for SIMD/scalar/Rust comparison."""

load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

_COMMON_DEPS = [
    "//tests/rust_ffi:tiny_skia_ffi",
    "@google_benchmark//:benchmark_main",
]

_NATIVE_X86_COPTS = select({
    "//bazel/config:simd_native_x86_64": [
        "-mavx2",
        "-mfma",
    ],
    "//bazel/config:simd_native_x86_32": [
        "-mavx2",
        "-mfma",
    ],
    "//conditions:default": [],
})

cc_binary(
    name = "render_perf_bench_native",
    srcs = ["RenderPerfBench.cpp"],
    copts = ["-std=c++20"] + _NATIVE_X86_COPTS,
    deps = _COMMON_DEPS + ["//src:tiny_skia_lib_native"],
)

cc_binary(
    name = "render_perf_bench_scalar",
    srcs = ["RenderPerfBench.cpp"],
    copts = ["-std=c++20"],
    deps = _COMMON_DEPS + ["//src:tiny_skia_lib_scalar"],
)

sh_test(
    name = "render_perf_regression_test",
    size = "large",
    srcs = ["run_render_perf_regression_test.sh"],
    args = [
        "$(COMPILATION_MODE)",
        "$(location :render_perf_bench_native)",
        "$(location :render_perf_bench_scalar)",
    ],
    data = [
        ":render_perf_bench_native",
        ":render_perf_bench_scalar",
    ],
    tags = ["perf_regression"],
)
