"""Test utilities for golden image comparison."""

package(default_visibility = ["//tests:__subpackages__"])

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "png_decoder",
    srcs = ["PngDecoder.cpp"],
    hdrs = ["PngDecoder.h"],
    copts = ["-std=c++20"],
    includes = ["."],
    deps = ["@zlib"],
)

cc_library(
    name = "golden_test_helper",
    hdrs = ["GoldenTestHelper.h"],
    copts = ["-std=c++20"],
    includes = ["."],
    deps = [
        ":png_decoder",
        "//src:tiny_skia_lib",
        "@googletest//:gtest",
        "@pixelmatch-cpp17",
    ],
)
