"""tiny_skia path64 sources."""

load("//:bazel/defs.bzl", "tiny_skia_cc_library")

tiny_skia_cc_library(
    name = "tiny_skia_path64",
    srcs = [
        "Cubic64.cpp",
        "LineCubicIntersections.cpp",
        "Mod.cpp",
        "Point64.cpp",
        "Quad64.cpp",
        "Scalar64.cpp",
    ],
    hdrs = [
        "Cubic64.h",
        "LineCubicIntersections.h",
        "Mod.h",
        "Point64.h",
        "Quad64.h",
        "Scalar64.h",
    ],
    deps = [
        "//src/tiny_skia:tiny_skia_point",
    ],
    defines = ["TINYSKIA_CPP_BIT_EXACT_MODE=1"],
    include_prefix = "tiny_skia/path64",
    strip_include_prefix = ".",
    visibility = ["//visibility:public"],
)
