"""tiny_skia pipeline source groups."""

filegroup(
    name = "srcs",
    srcs = [
        "Blitter.cpp",
        "Highp.cpp",
        "Lowp.cpp",
        "Mod.cpp",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "hdrs",
    srcs = [
        "Blitter.h",
        "Highp.h",
        "Lowp.h",
        "Mod.h",
    ],
    visibility = ["//visibility:public"],
)
