"""tiny_skia scan sources."""

load("//:bazel/defs.bzl", "tiny_skia_cc_library")

tiny_skia_cc_library(
    name = "tiny_skia_scan",
    srcs = [
        "Hairline.cpp",
        "HairlineAa.cpp",
        "Mod.cpp",
        "Path.cpp",
        "PathAa.cpp",
    ],
    hdrs = [
        "Hairline.h",
        "HairlineAa.h",
        "Mod.h",
        "Path.h",
        "PathAa.h",
    ],
    deps = [
        "//src/tiny_skia:tiny_skia_core",
    ],
    defines = ["TINYSKIA_CPP_BIT_EXACT_MODE=1"],
    include_prefix = "tiny_skia/scan",
    strip_include_prefix = ".",
    visibility = ["//visibility:public"],
)
