"""Tests for src/tiny_skia core modules."""

package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "tiny_skia_core_tests",
    srcs = [
        "AlphaRunsTest.cpp",
        "BlendModeTest.cpp",
        "BlitterTest.cpp",
        "ColorTest.cpp",
        "EdgeBuilderTest.cpp",
        "EdgeClipperTest.cpp",
        "EdgeCubicTest.cpp",
        "EdgeLineTest.cpp",
        "EdgeQuadraticTest.cpp",
        "FixedPointTest.cpp",
        "GeomTest.cpp",
        "LineClipperTest.cpp",
        "MathTest.cpp",
        "MaskTest.cpp",
        "PixmapTest.cpp",
        "PathGeometryTest.cpp",
    ],
    copts = ["-std=c++20"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//src:tiny_skia_lib",
        "//src/tiny_skia/tests/test_utils:geom_matchers",
        "//src/tiny_skia/tests/test_utils:path_edge_matchers",
        "//src/tiny_skia/tests/test_utils:pixmap_mask_matchers",
    ],
)
