"""tiny_skia wide sources."""

load("//:bazel/defs.bzl", "tiny_skia_cc_library")

tiny_skia_cc_library(
    name = "tiny_skia_wide",
    srcs = [
        "F32x16T.cpp",
        "F32x4T.cpp",
        "F32x8T.cpp",
        "I32x4T.cpp",
        "I32x8T.cpp",
        "Mod.cpp",
        "U16x16T.cpp",
        "U32x4T.cpp",
        "U32x8T.cpp",
    ],
    hdrs = [
        "F32x16T.h",
        "F32x4T.h",
        "F32x8T.h",
        "I32x4T.h",
        "I32x8T.h",
        "Mod.h",
        "U16x16T.h",
        "U32x4T.h",
        "U32x8T.h",
    ],
    defines = ["TINYSKIA_CPP_BIT_EXACT_MODE=1"],
    include_prefix = "tiny_skia/wide",
    strip_include_prefix = ".",
    visibility = ["//visibility:public"],
)
