"""Tests for src/tiny_skia/path64 modules."""

package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "tiny_skia_path64_tests",
    srcs = [
        "Cubic64Test.cpp",
        "LineCubicIntersectionsTest.cpp",
        "ModTest.cpp",
        "Point64Test.cpp",
        "Quad64Test.cpp",
    ],
    copts = ["-std=c++20"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//src:tiny_skia_lib",
    ],
)
