"""Tests for src/tiny_skia/pipeline modules."""

package(default_visibility = ["//visibility:public"])

load("//:bazel/simd_test.bzl", "tiny_skia_dual_mode_cc_test")

tiny_skia_dual_mode_cc_test(
    name = "tiny_skia_pipeline_tests",
    srcs = [
        "BlitterTest.cpp",
    ],
    copts = ["-std=c++20"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//src:tiny_skia_lib",
    ],
)
