"""Tests for src/tiny_skia/wide module."""

package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "tiny_skia_wide_tests",
    srcs = [
        "F32x4TTest.cpp",
        "F32x8TTest.cpp",
        "I32x4TTest.cpp",
        "I32x8TTest.cpp",
        "ModTest.cpp",
        "U32x4TTest.cpp",
        "U32x8TTest.cpp",
    ],
    copts = ["-std=c++20"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//src:tiny_skia_lib",
    ],
)
