"""Tests for src/tiny_skia/wide module."""

package(default_visibility = ["//visibility:public"])

load("//:bazel/simd_test.bzl", "tiny_skia_dual_mode_cc_test")

tiny_skia_dual_mode_cc_test(
    name = "tiny_skia_wide_tests",
    srcs = [
        "F32x4TTest.cpp",
        "F32x8TTest.cpp",
        "I32x4TTest.cpp",
        "I32x8TTest.cpp",
        "ModTest.cpp",
        "SimdModeTest.cpp",
        "U16x16TTest.cpp",
        "U32x4TTest.cpp",
        "U32x8TTest.cpp",
    ],
    copts = ["-std=c++20"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//src:tiny_skia_lib",
    ],
)
